# bareASGI

./: ,env  .gitignore  .pylintrc  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  mypy.ini  punch_config.py  punch_version.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  requirements_doc.txt  requirements_examples.txt  setup.py  versions.json
3.7/: 404.html  index.html  sitemap.xml
3.7/examples/: background_tasks_nt.py  controller_classes.py  cookies.py  cors_web_server_nt.py  exceptions.html  exceptions.py  global_middleware_nt.py  hello_world.py  hello_world_nt.py  server_sent_events.py
3.7/tutorial/: index.html
4.0/: sitemap.xml
4.0/css/: custom.css
4.0/examples/: cookies.py  cookies_nt.py  cors_rest_server_nt.py  cors_web_server_nt.py  hello_world_nt.py  simple_rest.py  simple_rest_nt.py  streaming_fetch.html
4.0/tutorial/: index.html
4.2/: 404.html  index.html  sitemap.xml
4.2/examples/: background_tasks_nt.py  cors_rest_server.py  cors_web_server.py  https_hypercorn.py  https_uvicorn.py  server_sent_events.html  server_sent_events_nt.py  web_socket_nt.py
bareasgi/: __init__.py  application.py  core_application.py  errors.py  http_instance.py  instance.py  lifespan_instance.py  middleware.py  streaming.py  types.py  utils.py  websocket_instance.py
bareasgi/basic_router/: __init__.py  http_router.py  path_definition.py  path_segment.py  web_socket_router.py
bareasgi/http/: __init__.py  http_callbacks.py  http_errors.py  http_instance.py  http_middleware.py  http_request.py  http_response.py  http_router.py
bareasgi/lifespan/: __init__.py  lifespan_instance.py  lifespan_request.py
bareasgi/middlewares/: compression.py
bareasgi/websockets/: __init__.py  websocket.py  websocket_callbacks.py  websocket_instance.py  websocket_middleware.py  websocket_request.py  websocket_router.py
docs/: 404.html  Makefile  api.rst  application.rst  asgi.rst  background_tasks.rst  conf.py  decorators.rst  examples.rst  h2.rst  handlers.rst  index.html  index.md  index.rst  io.rst  make.bat  middleware.rst  routing.rst  server_sent_events.rst  sitemap.xml  ssl.rst
docs/_static/: custom.css
docs/api/: bareasgi.basic_router.md  bareasgi.md
docs/examples/: background_tasks.py  background_tasks_nt.py  compression.py  compression_nt.py  controller_classes.py  controller_classes_nt.py  cookies_nt.py  cors_rest_server.py  cors_rest_server_nt.py  cors_web_server.html  exceptions.py  exceptions_nt.py  global_middleware.py  global_middleware_nt.py  hello_world.py  https_hypercorn.py  lifespan.py  lifespan_nt.py  local_middleware.py  local_middleware_nt.py  server_sent_events.py  server_sent_events_nt.py  simple_rest.py  simple_rest_nt.py  streaming_fetch.py  streaming_fetch_nt.py  web_socket.py  web_socket_nt.py
docs/search/: search_index.json
docs/tutorial/: background-tasks.md  compression.md  controller-classes.md  cors.md  exceptions.md  getting-started.md  headers.md  index.html  index.md  jinja2.md  lifespan.md  middleware.md  server-sent-events.md  simple-rest.md  static-files.md  streaming-fetch.md  websockets.md
docs/user-guide/: application.md  asgi.md  background-tasks.md  decorators.md  getting-started.md  h2.md  h3.md  installation.md  io.md  middleware.md  (+3 more)
documentation/: index.md
examples/: background_tasks.py  basic_auth.py  chunking.py  compression.py  compression_middleware.py  controller.py  cookie_demo.py  decorator.py  example1.py  form.py  http_push.py  http_response_status_codes.py  lifespan.py  middleware.py  raising_exceptions.py  rest.py  server_sent_events_queue.py  server_sent_events_simple.py  simple.py  simple_consumer.py  simple_web_page.py  simple_web_socket.py  streaming_fetch.html  streaming_fetch.py  web_socket.py
stable/: 404.html  index.html
templates/: macros.jinja2  main.jinja2
tests/: mock_io.py  test_basic_route_handler.py  test_cookies.py  test_header.py  test_http.py  test_middleware.py
(+269 files in other folders)
