[tool.poetry]
name = "bareasgi"
version = "3.7.1"
description = "A lightweight ASGI framework"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "bareasgi" }
]
repository = "https://github.com/rob-blackbourn/bareasgi"

[tool.poetry.dependencies]
python = "^3.7"
bareutils = "^3.6"
baretypes = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-asyncio = "^0.10"
pytest-runner = "^5.1"
uvicorn = "^0.9"
hypercorn = "^0.9"
uvloop = "^0.14.0"
pylint = "^2.8"
mypy = "^0.812"
rope = "^0.14.0"
mkdocs = "^1.0.4"
mkdocs-material = "^4.6.0"
jetblack-markdown = "^0.6"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
