[project]
name = "bareasgi"
version = "5.0.0-alpha.1"
description = "A lightweight ASGI framework"
authors = [
    { name = "Rob Blackbourn", email = "rob.blackbourn@gmail.com" }
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]
readme = "README.md"
dependencies = [
    "bareutils >=5.0.0-alpha.1"
]
license = "Apache-2.0"
license-files = [
    "LICENSE"
]
keywords = [
    "asgi",
    "web",
    "framework",
    "asyncio",
    "http",
]

[project.optional-dependencies]
dev = [
    "autopep8",
    "coverage",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pylint",
    "types-setuptools",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "jetblack-markdown",
    "mike",
]
examples = [
    "hypercorn",
    "uvicorn"
]

[project.urls]
Homepage = "https://rob-blackbourn.github.io/bareASGI"
Repository = "https://github.com/rob-blackbourn/bareASGI"
Issues = "https://github.com/rob-blackbourn/bareASGI/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# pylint
[tool.pylint.main]
py-version = "3.11"
jobs = 4

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_"]
bad-names = ["foo", "bar", "baz", "toto", "tutu", "tata"]

[tool.pylint."messages control"]
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "use-implicit-booleaness-not-comparison-to-string",
    "use-implicit-booleaness-not-comparison-to-zero",
    "missing-module-docstring",
]

# pytest
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "function"

# mypy
[tool.mypy]
files = [ "src/bareasgi", "tests", "examples" ]

[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true
